# liboti

./: CMakeLists.txt  README.md
include/: ActivateTransactionParser.c  ActivateTransactionParser.h  Poll.h  RestoreFactorySettings.h  SAT_Assert.h  TransparentData.h  config.h  frames.h  oti_types.h  otilib.h  protocol.h  tlv.h
include/platform-dependent/: platform_utils.h  serial.h
platform/linux-gcc/: CMakeLists.txt  Makefile  cmake_install.cmake
platform/linux-gcc/linux_platform/: linux_implementation.c  linux_serialcom.c
platform/linux-gcc/oti_lib/: .cproject  .project
platform/linux-gcc/test_commands/: .cproject  .project
platform/linux-gcc/test_config/: .cproject  .project
platform/linux-gcc/test_emv/: .cproject  .project
platform/linux-gcc/test_load_fw/: .cproject  .project
platform/linux-gcc/test_transparent/: .cproject  .project
platform/win32-visual/: libtests.sln
platform/win32-visual/oti_lib/: oti_lib.vcxproj  oti_lib.vcxproj.filters
platform/win32-visual/test_commands/: test_commands.vcxproj
platform/win32-visual/test_config/: test_config.vcxproj  test_config.vcxproj.filters
platform/win32-visual/test_emv/: OTIApp.conf  test_emv.vcxproj
platform/win32-visual/test_load_fw/: OTIApp.conf  test_load_fw.vcxproj
platform/win32-visual/test_load_fw_uno/: test_load_fw_uno.vcxproj
platform/win32-visual/test_passthrough/: test_passthrough.vcxproj
platform/win32-visual/test_transparent/: OTIApp.conf  test_transparent.vcxproj
platform/win32-visual/windows_platform/: SerialComm.c  windows_implementation.c
source/APIs/: ActivateTransaction.c  CallBootLoader.c  Cancel.c  DeleteCAPubKeys.c  ExternalDisplay.c  FlashPacket.c  GetFirmwareVersion.c  GetLCDMessage.c  GetSaturnConfig.c  GetSerialNumber.c  GraphicDisplay.c  LoadDefaultParams.c  OTIInit.c  OnlineStatus.c  Outport.c  OutportControl.c  PatternsControl.c  Ping.c  RemovePICC.c  ResetPCD.c  RunApplication.c  SelectLCDMessage.c  SetBaudRate.c  SetCAPubKeys.c  SetDebug.c  SetPort.c  StoreLCDMessage.c  UploadFirmwareOTIBoot.c  UserInterfaceMode.c  WriteDisplay.c
source/core/: ActivateTransactionParser.c  Configuration.c  Poll.c  Protocol.c  RestoreFactorySettings.c  SAT_Assert.c  TLV.c  TransparentData.c  TransparentTransportLayerControl.c  log.c  oti_enums_descr.c
tests/: CMakeLists.txt
tests/test_commands/: test_commands.c
tests/test_config/: test_config.c
tests/test_emv/: polling_manager.c  polling_manager.h  test_emv.c
tests/test_load_fw/: test_load_fw.c
tests/test_nxp_jcop/: test_nxp_jcop.c
tests/test_transparent/: test_transparent.c
